test/negative/707_tuple_assign_non_lvalue.fx
// expect: not assignable in a tuple assignment
var a = 1
(a, b + 1) = (2, 3)
println(a)
